Task2/02-service-accounts.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-system
  labels:
    kubernetes.io/metadata.name: app-system
