Task2/03-services-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-service
  namespace: app-system
spec:
  selector:
    matchLabels:
      app: data-service
  replicas: 1
  template:
    metadata:
      labels:
        app: data-service
    spec:
      serviceAccountName: data-service-sa
      containers:
      - name: data-service
        image: alpine:latest
        command: ["sh", "-c", "while true; do sleep 30; done"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: app-system
spec:
  selector:
    matchLabels:
      app: auth-service
  replicas: 1
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      serviceAccountName: auth-service-sa
      containers:
      - name: auth-service
        image: alpine:latest
        command: ["sh", "-c", "while true; do sleep 30; done"]
