Task2/test-pod.yaml
#After applying network policy only from app-system namespace and label app: data-service can access minio
---
apiVersion: apps/v1
kind: Deployment
metadata:
  generation: 2
  labels:
    app: data-service
  name: minio-test-data2
  namespace: app-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-service
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: data-service
    spec:
      containers:
      - command:
        - sleep
        - "100000000000000"
        image: minio/mc
        imagePullPolicy: Always
        name: mc
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
